force-app/main/default/objects/Litmos_Sync_Logs__c/Litmos_Sync_Logs__c.object-meta.xml
<CustomObject>
    <description>Holds records of syncs with Litmos to report success and failure on user creation and/or updates</description>
    <label>Litmos Sync Log</label>
    <nameField>
        <displayFormat>SYNC-{00000}</displayFormat>
        <label>Sync Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litmos Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>