force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Course involved in sync operation</description>
    <label>Course</label>
    <referenceTo>Litmos__Program__c</referenceTo>
    <relationshipLabel>Litmos Sync Logs</relationshipLabel>
    <relationshipName>Litmos_Sync_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>