force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Date_Time_of_Sync__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_of_Sync__c</fullName>
    <description>Date and time of sync initialization</description>
    <label>Date/Time of Sync</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>