force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Learning_Path__c.field-meta.xml
<CustomField>
    <fullName>Learning_Path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Path</label>
    <referenceTo>Litmos__LearningPath__c</referenceTo>
    <relationshipLabel>Litmos Sync Logs</relationshipLabel>
    <relationshipName>Litmos_Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>