force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Litmos_Team__c.field-meta.xml
<CustomField>
    <fullName>Litmos_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Litmos Team</label>
    <referenceTo>Litmos_Team__c</referenceTo>
    <relationshipLabel>Litmos Sync Logs</relationshipLabel>
    <relationshipName>Litmos_Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>