force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Litmos_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Litmos_User_Id__c</fullName>
    <description>Holds litmos user Id for quick reference</description>
    <label>Litmos User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>