force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Module involved in sync operation</description>
    <label>Module</label>
    <referenceTo>Litmos__ModuleNew__c</referenceTo>
    <relationshipLabel>Litmos Sync Logs</relationshipLabel>
    <relationshipName>Litmos_Sync_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>