force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Status_of_Sync__c.field-meta.xml
<CustomField>
    <fullName>Status_of_Sync__c</fullName>
    <description>Record the status of each sync</description>
    <label>Status of Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>