force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Sync_Information__c.field-meta.xml
<CustomField>
    <fullName>Sync_Information__c</fullName>
    <description>Field to hold information about sync, such as number of team members uploaded when in bulk. Not for describing issues.</description>
    <label>Sync Information</label>
    <type>TextArea</type>
</CustomField>