force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Sync_Issues__c.field-meta.xml
<CustomField>
    <fullName>Sync_Issues__c</fullName>
    <description>Description of sync errors. Can be issue with trigger or server error.</description>
    <label>Sync Issues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>