force-app/main/default/objects/Litmos_Sync_Logs__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Create</fullName>
            </value>
            <value>
                <fullName>Course Sync</fullName>
            </value>
            <value>
                <fullName>Learning Path Sync</fullName>
            </value>
            <value>
                <fullName>Module Sync</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Bulk Team Member</fullName>
            </value>
            <value>
                <fullName>Learning Path Program</fullName>
            </value>
            <value>
                <fullName>Course Module</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>