force-app/main/default/objects/Litmos_Sync_Logs__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User being updated/created in Litmos</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Litmos_User_Syncs</relationshipName>
    <type>Lookup</type>
</CustomField>