force-app/main/default/objects/Litmos_Sync_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Learning_Path__c</columns>
    <columns>Module__c</columns>
    <columns>Status_of_Sync__c</columns>
    <columns>Sync_Issues__c</columns>
    <columns>Type__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>