force-app/main/default/objects/Litmos_Sync_Logs__c/listViews/Failed_Updates.listView-meta.xml
<ListView>
    <fullName>Failed_Updates</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Date_Time_of_Sync__c</columns>
    <columns>Sync_Issues__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_of_Sync__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Failed Updates</label>
    <sharedTo>
        <group>LMS_Admins</group>
    </sharedTo>
</ListView>