force-app/main/default/objects/Litmos_Sync_Logs__c/listViews/Learning_Path_Updates.listView-meta.xml
<ListView>
    <fullName>Learning_Path_Updates</fullName>
    <columns>NAME</columns>
    <columns>Learning_Path__c</columns>
    <columns>Date_Time_of_Sync__c</columns>
    <columns>Status_of_Sync__c</columns>
    <columns>Sync_Issues__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Learning Path Sync</value>
    </filters>
    <label>Learning Path Updates</label>
    <sharedTo>
        <group>LMS_Admins</group>
    </sharedTo>
</ListView>