force-app/main/default/objects/Litmos_Sync_Logs__c/listViews/Team_Updates.listView-meta.xml
<ListView>
    <fullName>Team_Updates</fullName>
    <columns>NAME</columns>
    <columns>Litmos_Team__c</columns>
    <columns>Date_Time_of_Sync__c</columns>
    <columns>Status_of_Sync__c</columns>
    <columns>Sync_Issues__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Team</value>
    </filters>
    <label>Team Updates</label>
    <sharedTo>
        <group>LMS_Admins</group>
    </sharedTo>
</ListView>